@@ -1,3 +1,11 @@
+Tue May  1 07:48:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Mem_Map.cpp:
+          Layout changes
+
+        * ace/config-win32-msvc-9.h:
+          Removed wince comment
+
 Sun Apr 29 19:17:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/msvc_mpc_auto_compile.pl:
